@@ -1,3 +1,8 @@
+2003-04-09  Adam Fedor  <fedor@gnu.org>
+
+	* main.m: In application delegate implement ([application:openFile:])
+	so we will open rtf files; 
+
 2002-11-01  Adam Fedor  <fedor@gnu.org>
 
 	* main.m: Don't set NSDocumentController as app delegate
